--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    	
+	<dependency>
+	  <groupId>org.jboss.resteasy</groupId>
+	  <artifactId>resteasy-jaxrs</artifactId>
+	  <version>2.3.5.Final</version>
+	</dependency>           
+    
   </dependencies>
   <profiles>
     <profile>
