--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,16 +5,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          metadata-complete="false">
+
+		<context-param>
+			<param-name>resteasy.scan</param-name>
+			<param-value>true</param-value>
+		</context-param>
          
         <context-param>
 			<param-name>resteasy.servlet.mapping.prefix</param-name>
 			<param-value>/rest</param-value>
 		</context-param>
-		
-		<context-param>
-			<param-name>resteasy.scan</param-name>
-			<param-value>true</param-value>
-		</context-param>
+				
+		<listener>
+			<listener-class>
+				org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
+			</listener-class>
+		</listener>
 
          <servlet>
                   <servlet-name>health</servlet-name>
