--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,12 @@
       <scope>provided</scope>
     </dependency>
     	
-	<dependency>
+	<!--  <dependency>
 	  <groupId>org.jboss.resteasy</groupId>
 	  <artifactId>resteasy-jaxrs</artifactId>
 	  <version>2.3.5.Final</version>
-	</dependency>           
+	</dependency>
+	-->           
     
   </dependencies>
   <profiles>
