--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 	  <version>2.3.5.Final</version>
 	</dependency>
 	-->           
+	<dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-jaxrs</artifactId>
+      <version>2.3.5.Final</version>
+      <scope>provided</scope>
+    </dependency>
     
   </dependencies>
   <profiles>
