--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
 		<version>4.1.9.Final</version>
 	</dependency>
     	
+    <dependency>
+		<groupId>c3p0</groupId>
+		<artifactId>c3p0</artifactId>
+		<version>0.9.1.2</version>
+	</dependency>
+            
+    	
 	<!--  <dependency>
 	  <groupId>org.jboss.resteasy</groupId>
 	  <artifactId>resteasy-jaxrs</artifactId>
